# x4randommangaconverter

./: .gitattributes  .gitignore  LICENSE  README.md
xtch-core/: Cargo.toml
xtch-core/src/: lib.rs  main.rs  pipeline.rs  xtch.rs
xteink/: package-lock.json  package.json
xteink/src/: App.css  App.tsx
xteink/src-tauri/: Cargo.toml  tauri.conf.json
xteink/src-tauri/src/: lib.rs  main.rs
